Updates java.util.stream package to latest Android release.
PiperOrigin-RevId: 669383223